# proc11

./: CMakeLists.txt
.github/workflows/: main.yaml
examples/: CMakeLists.txt
examples/process_terminate/: CMakeLists.txt  child_main.cpp  parent_main.cpp
examples/process_wait/: CMakeLists.txt  child_main.cpp  parent_main.cpp
include/: proc11.h
include/proc11/: common.h  process.h  signal.h  signal_handler.h
src/: CMakeLists.txt  process.cpp  signal.cpp  signal_handler.cpp
test/: CMakeLists.txt  process.cpp  signal.cpp  signal_handler.cpp
test/children/: arg_logger.cpp  signaler.cpp
